feat: user register send email and update docs auth
